[package]
name = "btc_nodes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
dns-lookup = "1.0.7"
tokio = { version = "1", features = ["full"] }
bitcoin = "0.32.0"
time = "0.3.36"
futures = "0.3"
slog = "2.7"
slog-term = "2.9"
slog-async = "2.8"